<resources>
    <string name="see_more">Ver más</string>

    <string name="fragment_home__list__categories__text_header">Categorias</string>
    <string name="fragment_home__list__categories__text_see_more">@string/see_more</string>

    <string name="fragment_home__list__more_populars__text_header">Mas populares</string>
    <string name="fragment_home__list__more_populars__text_see_more">@string/see_more</string>

    <string name="fragment_home__list__last_published__text_header">Ultimas publicaciones</string>
    <string name="fragment_home__list__last_published__test_see_more">@string/see_more</string>
    <string name="publications_with_number">%d publicaciones</string>

    <string name="fragment_notifications__title_toolbar">Notificaciones</string>

    <string name="fragment_notifications__label__empty_notifications__text">Aún no tiene ninguna notificación. Las notificaciones que reciba apareceran aquí</string>

    <string name="fragment_favorite_publications__label__empty_favorite__text">Aún no tiene ninguna publicacion en favoritos</string>

    <string name="fragment_publication_details__img__favorite__description">Botón guardar favoritos</string>

    <string name="fragment_settings__title_toolbar">Ajustes</string>

    <string name="element_notification_settings__title">Notificaciones</string>
    <string name="element_notification_settings__description">Configura tus notificaciones a tu gusto</string>
    <string name="element_rate_us_settings__title">Valoranos</string>
    <string name="element_rate_us_settings__description">Valora nuestra aplicación</string>
    <string name="element_share_app_settings__title">Comparte la app</string>
    <string name="element_share_app_settings__description">¡Comparte la app con amigos y familiares!</string>
    <string name="element_help_settings__title">Ayuda</string>
    <string name="element_help_settings__description">Contáctanos, información sobre nosotros</string>
    <string name="element_version_settings__name">Versión de la aplicación:</string>

    <string name="text_share_app">¡Hey! Estoy viendo los trabajos realizados por Gres Y Baño Arahal desde su app. Te invito a descargarla y ver sus publicaciones. https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="share_by">Compartir por:</string>

    <string name="fragment_configure_notifications__title_toolbar">Notificaciones</string>
    <string name="fragment_configure_notifications__label__general__text">General:</string>
    <string name="fragment_configure_notifications__switch__general__text">Notificaciones</string>
    <string name="fragment_configure_notifications__label__categories__text">Categorias:</string>

    <string name="notifications_is_disable">Las notificaciones estan desactivadas</string>
    <string name="want_enable_notifications">¿Quiere activar las notificaciones?</string>
    <string name="cancel">Cancelar</string>
    <string name="activate">Activar</string>

    <string name="fragment_help__title_toolbar">Ayuda</string>

    <string name="element_help_call_me__title">¡Llamanos!</string>
    <string name="element_help_call_me__subtitle">Contacta con nosotros</string>
    <string name="element_help_find_me__title">Ven a vernos</string>
    <string name="element_help_find_me__subtitle">Encuentra nuestra tienda</string>

</resources>